Corrected changes after merge

--- a/html_Files/Login.html
+++ b/html_Files/Login.html
@@ -25,7 +25,7 @@
             <img src="https://picsum.photos/600/400?random=11" alt="">
             <h1>HOME GENIE</h1>
             <h2>New Here ?</h2>
-            <button type="submit" id="LoginBtn">Sign Up</button>
+            <a href="Signup.html" id="signUpBtn">Sign Up</a>
         </div>
         <div class="login-mobile">
             <div class="login-parent">
@@ -46,8 +46,8 @@
                                 <label for="login-password"></label>
                                 <div class="icon_input_wrapper">
                                     <i class="fas fa-lock"></i>
-                                    <input type="password" id="login-password" name="login-password" placeholder="Password"
-                                        required>
+                                    <input type="password" id="login-password" name="login-password"
+                                        placeholder="Password" required>
                                 </div>
                             </div>
                             <div class="login-buttons">
@@ -61,6 +61,7 @@
             </div>
         </div>
     </div>
+    <script src="../js/login.js"></script>
 </body>
 
 </html>
