Added notification Icon corrected border bottom

--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -20,16 +20,16 @@
 </head>
 
 <body>
-     <!-- For the Developer Copy Start from here  line 148-->
-     <header class="HomePage_header">
-        <h1>
+    <!-- For the Developer Copy Start from here  line 148-->
+    <header class="HomePage_header">
+        <div class="LogoContainer">
             <a href="index.html">
-                Home Genie
+                <img src="../img/Home_Genie_DK_Logo.png" alt="Home Genie Logo">
             </a>
-        </h1>
+        </div>
         <div class="Menu_BellIconContainer">
             <a href="#" id="ShowNotificationPopUp">
-                <i title="Show Notifications" class="fas fa-bell"></i>
+                <img src="../img/Notification_Genie.png" alt="Notification Genie">
             </a>
             <a href="#" id="ShowMenu">
                 <i title="Show Menu" class="fas fa-bars"></i>
@@ -37,7 +37,7 @@
         </div>
         <div class="dk-menu">
             <a href="#" id="dk-ShowNotificationPopUp">
-                <i title="Show Notifications" class="fas fa-bell"></i>
+                <img src="../img/Notification_Genie.png" alt="Notification Genie">
             </a>
             <ul>
                 <li>
@@ -175,7 +175,7 @@
                     <div class="about-manager">
                         <h2>Our Team</h2>
                         <div class="about-team-image1">
-                            <img src="../img/Shubham.jpg" alt="Team Manager's Pic" width="150px" height="200px"> 
+                            <img src="../img/Shubham.jpg" alt="Team Manager's Pic" width="150px" height="200px">
                             <p>Project Manager</p>
                         </div>
                     </div>
@@ -183,33 +183,33 @@
                         <div class="about-designers">
                             <h3>Designers</h3>
                             <div class="about-team-image2">
-                                <img src="../img/Manpreet.jpeg" alt="Designer's Pic"  width="150px" height="200px">
+                                <img src="../img/Manpreet.jpeg" alt="Designer's Pic" width="150px" height="200px">
                                 <p>Designer 1</p>
                             </div>
                             <div class="about-team-image3">
-                                <img src="../img/Anmol.JPG" alt="Design Lead's Pic"  width="150px" height="200px">
+                                <img src="../img/Anmol.JPG" alt="Design Lead's Pic" width="150px" height="200px">
                                 <p>Design Lead</p>
                             </div>
                             <div class="about-team-image4">
-                                <img src="../img/Satveer.jpg" alt="Designer's Pic"  width="150px" height="200px">
+                                <img src="../img/Satveer.jpg" alt="Designer's Pic" width="150px" height="200px">
                                 <p>Designer 2</p>
                             </div>
                         </div>
                         <div class="about-developers">
                             <h3>Developers</h3>
                             <div class="about-team-image5">
-                                <img src="../img/Tanya.jpg" alt="Developer's Pic"  width="150px" height="200px">
+                                <img src="../img/Tanya.jpg" alt="Developer's Pic" width="150px" height="200px">
                                 <p>Developer 1</p>
                             </div>
                             <div class="about-team-image6">
-                                <img src="../img/Parminder.png" alt="Developer Lead's Pic"  width="150px" height="200px">
+                                <img src="../img/Parminder.png" alt="Developer Lead's Pic" width="150px" height="200px">
                                 <p>Developer Lead</p>
                             </div>
                             <div class="about-team-image7">
-                                <img src="../img/Lakshita.jpg" alt="Developer's Pic"  width="150px" height="200px">
+                                <img src="../img/Lakshita.jpg" alt="Developer's Pic" width="150px" height="200px">
                                 <p>Developer 2</p>
                             </div>
-                        </div>        
+                        </div>
                     </div>
                 </div>
             </div>
@@ -217,41 +217,42 @@
     </div>
     <footer class="footer_Area">
         <div class="mb_footer">
-          <p> &copy; Geniques 2022 </p>
+            <p> &copy; Geniques 2022 </p>
         </div>
         <div class="dk_footer">
-          <div class="about-logo">
-            <img src="https://picsum.photos/200/200?random=11" alt="Home Genie logo">
-          </div>
-          <div class="about-footer-nav1">
-            <nav>
-              <ul>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Create New Listing</a></li>
-                <li><a href="#">View Your Listing</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="about-footer-nav2">
-            <nav>
-              <ul>
-                <li><a href="#">Terms & Conditions</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Cookie Policy</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="about-footer-nav3">
-            <nav>
-              <ul>
-                <li><a href="#">Let's Get Connected !!</a></li>
-                <li><a href="#">+1 1234567890</a></li>
-                <li><a href="#">abc@homegenie.ca</a></li>
-              </ul>
-            </nav>
-          </div>
+            <div class="about-logo">
+                <img src="https://picsum.photos/200/200?random=11" alt="Home Genie logo">
+            </div>
+            <div class="about-footer-nav1">
+                <nav>
+                    <ul>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Create New Listing</a></li>
+                        <li><a href="#">View Your Listing</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="about-footer-nav2">
+                <nav>
+                    <ul>
+                        <li><a href="#">Terms & Conditions</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Cookie Policy</a></li>
+                    </ul>
+                </nav>
+            </div>
+            <div class="about-footer-nav3">
+                <nav>
+                    <ul>
+                        <li><a href="#">Let's Get Connected !!</a></li>
+                        <li><a href="#">+1 1234567890</a></li>
+                        <li><a href="#">abc@homegenie.ca</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
-      </footer>
+    </footer>
     <script src="../js/script.js" defer></script>
 </body>
+
 </html>
