--- a/html_Files/CreateListing.html
+++ b/html_Files/CreateListing.html
@@ -21,10 +21,14 @@
 <body class="create-one-body">
     <div id="page-body">
         <header class="HomePage_header">
-            <h1>Home Genie</h1>
+            <div class="LogoContainer">
+                <a href="index.html">
+                    <img src="../img/Home_Genie_DK_Logo.png" alt="Home Genie Logo">
+                </a>
+            </div>
             <div class="Menu_BellIconContainer">
                 <a href="#" id="ShowNotificationPopUp">
-                    <i title="Show Notifications" class="fas fa-bell"></i>
+                    <img src="../img/Notification_Genie.png" alt="Notification Genie">
                 </a>
                 <a href="#" id="ShowMenu">
                     <i title="Show Menu" class="fas fa-bars"></i>
@@ -32,7 +36,7 @@
             </div>
             <div class="dk-menu">
                 <a href="#" id="dk-ShowNotificationPopUp">
-                    <i title="Show Notifications" class="fas fa-bell"></i>
+                    <img src="../img/Notification_Genie.png" alt="Notification Genie">
                 </a>
                 <ul>
                     <li>
