--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -57,7 +57,7 @@
     </div>
     <div class="Menu_BellIconContainer">
       <a href="#" id="ShowNotificationPopUp">
-        <i title="Show Notifications" class="fas fa-bell"></i>
+        <img src="../img/Notification_Genie.png" alt="Notification Genie">
       </a>
       <a href="#" id="ShowMenu">
         <i title="Show Menu" class="fas fa-bars"></i>
@@ -67,7 +67,7 @@
       <ul>
         <li>
           <a href="#" id="dk-ShowNotificationPopUp">
-            <i title="Show Notifications" class="fas fa-bell"></i>
+            <img src="../img/Notification_Genie.png" alt="Notification Genie">
           </a>
         </li>
         <li>
