Corrected UI For the Signup and Login Page

--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -27,7 +27,7 @@
                 <img src="../img/Home_Genie_DK_Logo.png" alt="Home Genie Logo">
             </a>
         </div>
-        <div class="Menu_BellIconContainer">
+s        <div class="Menu_BellIconContainer">
             <a href="#" id="ShowNotificationPopUp">
                 <img src="../img/Notification_Genie.png" alt="Notification Genie">
             </a>
