Corrected Some UI Changes done in scripting Ready for the show

--- a/html_Files/BrowseListings.html
+++ b/html_Files/BrowseListings.html
@@ -22,29 +22,35 @@
 </head>
 
 <body>
+    <!-- For the Developer Copy Start from here  line 148-->
     <header class="HomePage_header">
-        <h1>Home Genie</h1>
+        <div class="LogoContainer">
+            <a href="index.html"><img src="../img/Home_Genie_DK_Logo.png" alt="Home Genie Logo">
+            </a>
+        </div>
         <div class="Menu_BellIconContainer">
             <a href="#" id="ShowNotificationPopUp">
-                <i title="Show Notifications" class="fas fa-bell"></i>
+                <img src="../img/Notification_Genie.png" alt="Notification Genie">
             </a>
             <a href="#" id="ShowMenu">
                 <i title="Show Menu" class="fas fa-bars"></i>
             </a>
         </div>
         <div class="dk-menu">
-            <a href="#" id="dk-ShowNotificationPopUp">
-                <i title="Show Notifications" class="fas fa-bell"></i>
-            </a>
             <ul>
+                <li>
+                    <a href="#" id="dk-ShowNotificationPopUp">
+                        <img src="../img/Notification_Genie.png" alt="Notification Genie">
+                    </a>
+                </li>
                 <li>
                     <a href="BrowseListings.html">Browse</a>
                 </li>
                 <li>
-                    <a href="">Create new</a>
+                    <a href="CreateListing.html">Create</a>
                 </li>
                 <li>
-                    <a href="">Personal listings</a>
+                    <a href="">View listings</a>
                 </li>
                 <li>
                     <a href="AboutUs.html">About Us</a>
@@ -56,7 +62,7 @@
                     <div class="subProfileMenu">
                         <ul>
                             <li>
-                                <a href="UpdateProfile.html">Update Profile</a>
+                                <a href="UpdateProfile.html">Profile</a>
                             </li>
                             <li>
                                 <a href="Login.html">Logout</a>
@@ -77,7 +83,8 @@
             </li>
             <li>
                 <a href="BrowseListings.html"><i class="fas fa-browser"></i><i class="fa fa-list"
-                        aria-hidden="true"></i> Browse Listings</a>
+                        aria-hidden="true"></i> Browse
+                    Listings</a>
             </li>
             <li>
                 <a href="CreateListing.html"> <i class="fa fa-list" aria-hidden="true"></i> Create New Listing</a>
@@ -119,46 +126,51 @@
             <div class="triangle"></div>
         </div>
     </div>
+    <!-- Till here -->
 
-    <main></main>
+
+    <main>
+        <h1>Under Maintaince</h1>
+    </main>
     <footer class="footer_Area">
-        <div class="mb_footer">
-          <p> &copy; Geniques 2022 </p>
-        </div>
-        <div class="dk_footer">
-          <div class="about-logo">
-            <img src="https://picsum.photos/200/200?random=11" alt="Home Genie logo">
-          </div>
-          <div class="about-footer-nav1">
-            <nav>
-              <ul>
-                <li><a href="#">Contact Us</a></li>
-                <li><a href="#">Create New Listing</a></li>
-                <li><a href="#">View Your Listing</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="about-footer-nav2">
-            <nav>
-              <ul>
-                <li><a href="#">Terms & Conditions</a></li>
-                <li><a href="#">Privacy Policy</a></li>
-                <li><a href="#">Cookie Policy</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div class="about-footer-nav3">
-            <nav>
-              <ul>
-                <li><a href="#">Let's Get Connected !!</a></li>
-                <li><a href="#">+1 1234567890</a></li>
-                <li><a href="#">abc@homegenie.ca</a></li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-      </footer>
-    <script src="../js/script.js" defer></script>
+        <footer class="footer_Area">
+            <div class="mb_footer">
+                <p> &copy; Geniques 2022 </p>
+            </div>
+            <div class="dk_footer">
+                <div class="about-logo">
+                    <img src="../img/Home_Genie_Logo_Footer.png" alt="Home Genie logo">
+                </div>
+                <div class="about-footer-nav1">
+                    <nav>
+                        <ul>
+                            <li><a href="#">Contact Us</a></li>
+                            <li><a href="#">Create New Listing</a></li>
+                            <li><a href="#">View Your Listing</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="about-footer-nav2">
+                    <nav>
+                        <ul>
+                            <li><a href="#">Terms & Conditions</a></li>
+                            <li><a href="#">Privacy Policy</a></li>
+                            <li><a href="#">Cookie Policy</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="about-footer-nav3">
+                    <nav>
+                        <ul>
+                            <li><a href="#">Let's Get Connected !!</a></li>
+                            <li><a href="#">+1 1234567890</a></li>
+                            <li><a href="#">abc@homegenie.ca</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </footer>
+        <script src="../js/script.js" defer></script>
 </body>
 
 </html>
