--- a/html_Files/CreateListing.html
+++ b/html_Files/CreateListing.html
@@ -231,7 +231,7 @@
             </div>
             <div class="dk_footer">
                 <div class="about-logo">
-                    <img src="https://picsum.photos/200/200?random=11" alt="Home Genie logo">
+                    <img src="../img/Home_Genie_Logo_Footer.png" alt="Home Genie logo">
                 </div>
                 <div class="about-footer-nav1">
                     <nav>
