--- a/html_Files/UpdateProfile.html
+++ b/html_Files/UpdateProfile.html
@@ -22,38 +22,58 @@
 
 <body>
     <header class="HomePage_header">
-        <h1>Home Genie</h1>
+        <div class="LogoContainer">
+            <a href="index.html">
+                <img src="../img/Home_Genie_DK_Logo.png" alt="Home Genie Logo">
+            </a>
+        </div>
         <div class="Menu_BellIconContainer">
             <a href="#" id="ShowNotificationPopUp">
-                <i title="Show Notifications" class="fas fa-bell"></i>
+                <img src="../img/Notification_Genie.png" alt="Notification Genie">
             </a>
             <a href="#" id="ShowMenu">
                 <i title="Show Menu" class="fas fa-bars"></i>
             </a>
         </div>
         <div class="dk-menu">
-            <a href="#" id="dk-ShowNotificationPopUp">
-                <i title="Show Notifications" class="fas fa-bell"></i>
-            </a>
             <ul>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="#" id="dk-ShowNotificationPopUp">
+                        <img src="../img/Notification_Genie.png" alt="Notification Genie">
+                    </a>
                 </li>
                 <li>
                     <a href="BrowseListings.html">Browse</a>
                 </li>
                 <li>
-                    <a href="#">Create</a>
+                    <a href="CreateListing.html">Create</a>
                 </li>
                 <li>
-                    <a href="#">Your Listings</a>
+                    <a href="">View listings</a>
                 </li>
                 <li>
                     <a href="AboutUs.html">About Us</a>
                 </li>
+                <li>
+                    <a href="#" class="ProfileIcon">
+                        <i title="Profile" class="far fa-user-circle"></i>
+                    </a>
+                    <div class="subProfileMenu">
+                        <ul>
+                            <li>
+                                <a href="UpdateProfile.html">Profile</a>
+                            </li>
+                            <li>
+                                <a href="Login.html">Logout</a>
+                            </li>
+                        </ul>
+                    </div>
+                </li>
             </ul>
         </div>
     </header>
+
+    <!-- <div class="mb-nav_wrapper"></div> -->
     <nav class="mb-menu" id="showHideMenu">
         <ul>
             <!-- Add Links to the Pages when created -->
@@ -62,7 +82,8 @@
             </li>
             <li>
                 <a href="BrowseListings.html"><i class="fas fa-browser"></i><i class="fa fa-list"
-                        aria-hidden="true"></i> Browse Listings</a>
+                        aria-hidden="true"></i> Browse
+                    Listings</a>
             </li>
             <li>
                 <a href="CreateListing.html"> <i class="fa fa-list" aria-hidden="true"></i> Create New Listing</a>
@@ -104,6 +125,7 @@
             <div class="triangle"></div>
         </div>
     </div>
+    <!-- Till here -->
     <main>
         <div class="upd_parent_wrapper">
             <div class="upd_profile_wrapper">
@@ -172,7 +194,7 @@
         </div>
         <div class="dk_footer">
             <div class="about-logo">
-                <img src="https://picsum.photos/200/200?random=11" alt="Home Genie logo">
+                <img src="../img/Home_Genie_Logo_Footer.png" alt="Home Genie logo">
             </div>
             <div class="about-footer-nav1">
                 <nav>
