--- a/html_Files/index.html
+++ b/html_Files/index.html
@@ -157,7 +157,7 @@
 
   <main>
     <div class="mb-UserGreetingContainer">
-      <h1>Welcome, <span id="user_Name">Shubham</span></h1>
+      <h1>Welcome, <span id="user_Name"></span></h1>
     </div>
     <div class="heroImageContainer">
       <img class="hero_Image" src="../img/HERO IMAGE-02.png" alt="Hero_Image">
