--- a/html_Files/AboutUs.html
+++ b/html_Files/AboutUs.html
@@ -27,7 +27,7 @@
                 <img src="../img/Home_Genie_DK_Logo.png" alt="Home Genie Logo">
             </a>
         </div>
-s        <div class="Menu_BellIconContainer">
+        <div class="Menu_BellIconContainer">
             <a href="#" id="ShowNotificationPopUp">
                 <img src="../img/Notification_Genie.png" alt="Notification Genie">
             </a>
@@ -217,41 +217,41 @@ s        <div class="Menu_BellIconContainer">
     </div>
     <footer class="footer_Area">
         <div class="mb_footer">
-            <p> &copy; Geniques 2022 </p>
+          <p> &copy; Geniques 2022 </p>
         </div>
         <div class="dk_footer">
-            <div class="about-logo">
-                <img src="https://picsum.photos/200/200?random=11" alt="Home Genie logo">
-            </div>
-            <div class="about-footer-nav1">
-                <nav>
-                    <ul>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Create New Listing</a></li>
-                        <li><a href="#">View Your Listing</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="about-footer-nav2">
-                <nav>
-                    <ul>
-                        <li><a href="#">Terms & Conditions</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Cookie Policy</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class="about-footer-nav3">
-                <nav>
-                    <ul>
-                        <li><a href="#">Let's Get Connected !!</a></li>
-                        <li><a href="#">+1 1234567890</a></li>
-                        <li><a href="#">abc@homegenie.ca</a></li>
-                    </ul>
-                </nav>
-            </div>
+          <div class="about-logo">
+            <img src="../img/Home_Genie_Logo_Footer.png" alt="Home Genie logo">
+          </div>
+          <div class="about-footer-nav1">
+            <nav>
+              <ul>
+                <li><a href="#">Contact Us</a></li>
+                <li><a href="#">Create New Listing</a></li>
+                <li><a href="#">View Your Listing</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="about-footer-nav2">
+            <nav>
+              <ul>
+                <li><a href="#">Terms & Conditions</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Cookie Policy</a></li>
+              </ul>
+            </nav>
+          </div>
+          <div class="about-footer-nav3">
+            <nav>
+              <ul>
+                <li><a href="#">Let's Get Connected !!</a></li>
+                <li><a href="#">+1 1234567890</a></li>
+                <li><a href="#">abc@homegenie.ca</a></li>
+              </ul>
+            </nav>
+          </div>
         </div>
-    </footer>
+      </footer>
     <script src="../js/script.js" defer></script>
 </body>
 
