View listing from the homepage page and some css tweaks

--- a/html_Files/Listing.html
+++ b/html_Files/Listing.html
@@ -127,39 +127,15 @@
     <!-- Till here -->
 
     <main class="Listing_Main_Container">
-        <div class="Category_Listing_Container">
+
+        <div class="main-parent-title">
             <h2 id="main_Title"></h2>
-            <div class="card">
-                <img src="https://picsum.photos/500/250?random=11" alt="random image">
-                <h3>Listing Title</h3>
-                <p>Posted By <span>Lorem Ipsum</span></p>
-                <div class="browseBtn_Container">
-                    <a href="#" class="browseBtn">View Listing</a>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://picsum.photos/500/250?random=13" alt="random image">
-                <h3>Listing Title</h3>
-                <p>Posted By <span>Lorem Ipsum</span></p>
-                <div class="browseBtn_Container">
-                    <a href="#" class="browseBtn">View Listing</a>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://picsum.photos/500/250?random=12" alt="random image">
-                <h3>Listing Title</h3>
-                <p>Posted By <span>Lorem Ipsum</span></p>
-                <div class="browseBtn_Container">
-                    <a href="#" class="browseBtn">View Listing</a>
-                </div>
-            </div>
-            <div class="card">
-                <img src="https://picsum.photos/500/250?random=14" alt="random image">
-                <h3>Listing Title</h3>
-                <p>Posted By <span>Lorem Ipsum</span></p>
-                <div class="browseBtn_Container">
-                    <a href="#" class="browseBtn">View Listing</a>
-                </div>
+        </div>
+        <div class="Category_Listing_Container">
+        </div>
+
+        <div class="Category_Listing_Container">
+            <div class="Category_Listing_Container">
             </div>
         </div>
         <!-- <div class="OwnerListingPage">
