--- a/html_Files/SpecificListing.html
+++ b/html_Files/SpecificListing.html
@@ -22,31 +22,31 @@
 <body>
     <header class="HomePage_header">
         <div class="LogoContainer">
-            <img src="../img/Home_Genie_DK_Logo.png" alt="Home Genie Logo">
+            <a href="index.html">
+                <img src="../img/Home_Genie_DK_Logo.png" alt="Home Genie Logo">
+            </a>
         </div>
         <div class="Menu_BellIconContainer">
             <a href="#" id="ShowNotificationPopUp">
-                <i title="Show Notifications" class="fas fa-bell"></i>
+                <img src="../img/Notification_Genie.png" alt="Notification Genie">
             </a>
             <a href="#" id="ShowMenu">
                 <i title="Show Menu" class="fas fa-bars"></i>
             </a>
         </div>
         <div class="dk-menu">
+            <a href="#" id="dk-ShowNotificationPopUp">
+                <img src="../img/Notification_Genie.png" alt="Notification Genie">
+            </a>
             <ul>
-                <li>
-                    <a href="#" id="dk-ShowNotificationPopUp">
-                        <i title="Show Notifications" class="fas fa-bell"></i>
-                    </a>
-                </li>
                 <li>
                     <a href="BrowseListings.html">Browse</a>
                 </li>
                 <li>
-                    <a href="CreateListing.html">Create</a>
+                    <a href="">Create new</a>
                 </li>
                 <li>
-                    <a href="">View listings</a>
+                    <a href="">Personal listings</a>
                 </li>
                 <li>
                     <a href="AboutUs.html">About Us</a>
@@ -58,7 +58,7 @@
                     <div class="subProfileMenu">
                         <ul>
                             <li>
-                                <a href="UpdateProfile.html">Profile</a>
+                                <a href="UpdateProfile.html">Update Profile</a>
                             </li>
                             <li>
                                 <a href="Login.html">Logout</a>
@@ -79,11 +79,10 @@
             </li>
             <li>
                 <a href="BrowseListings.html"><i class="fas fa-browser"></i><i class="fa fa-list"
-                        aria-hidden="true"></i> Browse
-                    Listings</a>
+                        aria-hidden="true"></i> Browse Listings</a>
             </li>
             <li>
-                <a href="CreateListing.html"> <i class="fa fa-list" aria-hidden="true"></i> Create New Listing</a>
+                <a href="#"> <i class="fa fa-list" aria-hidden="true"></i> Create New Listing</a>
             </li>
             <li>
                 <a href="#"><i class="fas fa-eye"></i> View Your Listing</a>
@@ -123,6 +122,7 @@
         </div>
     </div>
     <!-- Till here -->
+
     <main>
         <div class="specific-wrapper">
             <div class="specific-heading">
